# NecroCore

./: README.md  _modules.lnk
dep/: CMakeLists.txt
dep/lualib/: CMakeLists.txt
sql/custom/auth/: 2019_15_08_auth_arenaspectator.sql
sql/custom/world/: 2019_08_15_world_phases.sql
src/: CMakeLists.txt
src/LuaEngine/: ElunaEventMgr.h
src/common/: Banner.cpp
src/server/game/: CMakeLists.txt
src/server/game/Accounts/: RBAC.h
src/server/game/Battlegrounds/: Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  SpectatorAddon.cpp  SpectatorAddon.h
src/server/game/Entities/Creature/: Creature.cpp
src/server/game/Entities/GameObject/: GameObject.cpp
src/server/game/Entities/Object/: Object.cpp
src/server/game/Entities/Player/: Player.cpp  Player.h
src/server/game/Entities/Unit/: Unit.cpp
src/server/game/Globals/: ObjectMgr.cpp
src/server/game/Guilds/: Guild.cpp  Guild.h
src/server/game/Handlers/: ChatHandler.cpp  ItemHandler.cpp  MiscHandler.cpp  NPCHandler.cpp  QuestHandler.cpp  SpellHandler.cpp
src/server/game/LuaEngine/: CMakeLists.txt  GuildMethods.h  LuaEngine.cpp  LuaFunctions.cpp  PlayerMethods.h  lmarshal.cpp
src/server/game/LuaEngine/confFiles/: _ActiveModuleListing.ext  eventCreator.conf.ext  modRatesExp.conf.ext
src/server/game/LuaEngine/modules/: modules_active.lua
src/server/game/LuaEngine/modules/Commands/: Mod_AdminCreateModule.lua  Mod_EventCreator.lua
src/server/game/LuaEngine/modules/commands/: eventCreator.lua
src/server/game/LuaEngine/modules/gameplay/: modRateExp.lua
src/server/game/Maps/: Map.cpp
src/server/game/Miscellaneous/: Language.h
src/server/game/Server/: WorldSession.cpp
src/server/game/Spells/: Spell.cpp
src/server/game/World/: World.cpp
src/server/scripts/Commands/: cs_gm.cpp  cs_npc.cpp
src/server/scripts/Custom/: custom_script_loader.cpp
src/server/scripts/Custom/ArenaSpectator/: arena_spectator.cpp
src/server/scripts/Custom/Reforging/: Reforger.cpp
src/server/worldserver/: worldserver.conf.dist
